--- a/src/main/resources/desktopScenes/Calculator.fxml
+++ b/src/main/resources/desktopScenes/Calculator.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.control.MenuItem?>
@@ -31,6 +32,7 @@
                   </Label>
                </children>
             </AnchorPane>
+            <ChoiceBox fx:id="operationOrderSetting" prefHeight="40.0" prefWidth="150.0" />
          </children>
       </HBox>
    </top>
