--- a/src/main/resources/desktopScenes/ProgrammerCalculator.fxml
+++ b/src/main/resources/desktopScenes/ProgrammerCalculator.fxml
@@ -92,7 +92,7 @@
                         <Font size="18.0" />
                     </font>
                 </Button>
-                <Button disable="true" layoutX="118.0" layoutY="204.0" mnemonicParsing="false" prefHeight="65.0" prefWidth="113.0" text="," GridPane.rowIndex="3">
+                <Button disable="true" layoutX="118.0" layoutY="204.0" mnemonicParsing="false" prefHeight="65.0" prefWidth="113.0" text="." GridPane.rowIndex="3">
                     <font>
                         <Font size="18.0" />
                     </font>
