--- a/src/main/resources/desktopScenes/StandardCalculator.fxml
+++ b/src/main/resources/desktopScenes/StandardCalculator.fxml
@@ -31,7 +31,7 @@
             <Insets left="20.0" right="20.0" />
          </padding>
       </Label>
-      <GridPane layoutX="40.0" layoutY="250.0" prefHeight="260.0" prefWidth="330.0" fx:id="leftGridPane">
+      <GridPane fx:id="leftGridPane" layoutX="40.0" layoutY="250.0" prefHeight="260.0" prefWidth="330.0">
         <columnConstraints>
           <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0" />
@@ -89,7 +89,7 @@
                   <Font size="18.0" />
                </font>
             </Button>
-            <Button layoutX="118.0" layoutY="204.0" mnemonicParsing="false" prefHeight="65.0" prefWidth="113.0" text="," GridPane.rowIndex="3">
+            <Button layoutX="118.0" layoutY="204.0" mnemonicParsing="false" prefHeight="65.0" prefWidth="113.0" text="." GridPane.rowIndex="3">
                <font>
                   <Font size="24.0" />
                </font>
@@ -99,9 +99,14 @@
                   <Font size="18.0" />
                </font>
             </Button>
+            <Button layoutX="10.0" layoutY="205.0" mnemonicParsing="false" prefHeight="65.0" prefWidth="113.0" text="," GridPane.columnIndex="2" GridPane.rowIndex="3">
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </Button>
          </children>
       </GridPane>
-      <GridPane layoutX="415.0" layoutY="250.0" prefHeight="260.0" prefWidth="200.0" fx:id="centerGridPane">
+      <GridPane fx:id="centerGridPane" layoutX="415.0" layoutY="250.0" prefHeight="260.0" prefWidth="200.0">
         <columnConstraints>
           <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0" />
@@ -158,7 +163,7 @@
             </Button>
          </children>
       </GridPane>
-      <GridPane layoutX="660.0" layoutY="250.0" prefHeight="260.0" prefWidth="200.0" fx:id="rightGridPane">
+      <GridPane fx:id="rightGridPane" layoutX="660.0" layoutY="250.0" prefHeight="260.0" prefWidth="200.0">
          <columnConstraints>
             <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0" />
